// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignOrExecute should display a confirmation screen 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-118bpkk-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root cardContent css-46bh2p-MuiCardContent-root"
    >
      <div
        class="MuiStack-root css-1sazv7p-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1x8l8fd-MuiPaper-root-MuiAccordion-root"
          >
            <div
              aria-expanded="false"
              class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-knbc2d-MuiButtonBase-root-MuiAccordionSummary-root"
              data-testid="decoded-tx-summary"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-6nefnh-MuiAccordionSummary-content"
              >
                Advanced details
                <span
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <mock-icon
                    aria-hidden="true"
                    classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-i8sqcg-MuiSvgIcon-root"
                    focusable="false"
                  />
                </span>
                <div
                  class="MuiBox-root css-i9gxme"
                />
              </div>
              <div
                class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17ceore-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                >
                  <div
                    class="MuiAccordion-region"
                    role="region"
                  >
                    <div
                      class="MuiAccordionDetails-root css-7wcoc8-MuiAccordionDetails-root"
                      data-testid="decoded-tx-details"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-118bpkk-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root cardContent css-46bh2p-MuiCardContent-root"
    >
      <div
        class="wrapper"
      >
        <div
          class="icon sign"
        >
          <mock-icon
            aria-hidden="true"
            classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-11dtfly-MuiSvgIcon-root"
            focusable="false"
          />
        </div>
        <div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-kmqua7-MuiTypography-root"
          >
            confirm
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body2 css-ceebrx-MuiTypography-root"
          >
            You're about to 
            create and 
            confirm
             this transaction.
          </p>
        </div>
      </div>
      <form>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1cvjk81-MuiDivider-root"
        />
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-dnrpxu-MuiCardActions-root"
        >
          <div
            class="MuiStack-root css-irtfmw-MuiStack-root"
          >
            <span
              class=""
              data-mui-internal-clone-element="true"
            >
              <span
                data-track="batching: Add to batch"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-fj99we-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  <mock-icon
                    aria-hidden="true"
                    classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-gxmw0o-MuiSvgIcon-root"
                    focusable="false"
                  />
                  Add to batch
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </span>
            </span>
            <div
              class="MuiBox-root css-1aqmpzz"
            >
               
              <div
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-crkpmc-MuiDivider-root"
                role="separator"
              >
                <span
                  class="MuiDivider-wrapper css-165zycj-MuiDivider-wrapper"
                >
                  or
                </span>
              </div>
            </div>
            <span
              aria-label="Please connect your wallet"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1mhjei7-MuiButtonBase-root-MuiButton-root"
                data-testid="sign-btn"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                Sign
              </button>
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`SignOrExecute should display a loading component 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-118bpkk-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root cardContent css-46bh2p-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-17luq05"
      >
        <div
          class="box MuiBox-root css-0"
        >
          <div
            class="rect rectTl"
          />
          <div
            class="rect rectTr"
          />
          <div
            class="rect rectBl"
          />
          <div
            class="rect rectBr"
          />
          <div
            class="rect rectCenter"
          />
          <svg
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <filter
                id="gooey"
              >
                <fegaussianblur
                  in="SourceGraphic"
                  result="blur"
                  stdDeviation="3"
                />
                <fecolormatrix
                  in="blur"
                  mode="matrix"
                  result="goo"
                  values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9"
                />
                <fecomposite
                  in="SourceGraphic"
                  in2="goo"
                  operator="atop"
                />
              </filter>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignOrExecute should display an error screen 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-118bpkk-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root cardContent css-46bh2p-MuiCardContent-root"
    >
      <div
        class="MuiStack-root css-1sazv7p-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1x8l8fd-MuiPaper-root-MuiAccordion-root"
          >
            <div
              aria-expanded="false"
              class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-knbc2d-MuiButtonBase-root-MuiAccordionSummary-root"
              data-testid="decoded-tx-summary"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-6nefnh-MuiAccordionSummary-content"
              >
                Advanced details
                <span
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <mock-icon
                    aria-hidden="true"
                    classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-i8sqcg-MuiSvgIcon-root"
                    focusable="false"
                  />
                </span>
                <div
                  class="MuiBox-root css-i9gxme"
                />
              </div>
              <div
                class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17ceore-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                >
                  <div
                    class="MuiAccordion-region"
                    role="region"
                  >
                    <div
                      class="MuiAccordionDetails-root css-7wcoc8-MuiAccordionDetails-root"
                      data-testid="decoded-tx-details"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container css-1d1otxt-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-fzss1y-MuiTypography-root"
                          >
                            safeTxGas:
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <div
                            class="MuiBox-root css-rurw5h"
                          >
                            0
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-container css-1d1otxt-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-fzss1y-MuiTypography-root"
                          >
                            Raw data:
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <div
                            class="MuiBox-root css-70qvj9"
                            data-testid="tx-data-row"
                          >
                            <div>
                              0
                               bytes
                            </div>
                            <span
                              aria-label="Copy to clipboard"
                              class=""
                              data-mui-internal-clone-element="true"
                              style="cursor: pointer;"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-nmr6e8-MuiButtonBase-root-MuiIconButton-root"
                                tabindex="0"
                                type="button"
                              >
                                <mock-icon
                                  aria-hidden="true"
                                  classname="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-j1da6x-MuiSvgIcon-root"
                                  data-testid="copy-btn-icon"
                                  focusable="false"
                                />
                                <span
                                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                                />
                              </button>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-118bpkk-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root cardContent css-46bh2p-MuiCardContent-root"
    >
      <div
        class="wrapper"
      >
        <div
          class="icon sign"
        >
          <mock-icon
            aria-hidden="true"
            classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-11dtfly-MuiSvgIcon-root"
            focusable="false"
          />
        </div>
        <div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-kmqua7-MuiTypography-root"
          >
            confirm
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body2 css-ceebrx-MuiTypography-root"
          >
            You're about to 
            create and 
            confirm
             this transaction.
          </p>
        </div>
      </div>
      <form>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1cvjk81-MuiDivider-root"
        />
        <div
          class="MuiCardActions-root MuiCardActions-spacing css-dnrpxu-MuiCardActions-root"
        >
          <div
            class="MuiStack-root css-irtfmw-MuiStack-root"
          >
            <span
              class=""
              data-mui-internal-clone-element="true"
            >
              <span
                data-track="batching: Add to batch"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-fj99we-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  <mock-icon
                    aria-hidden="true"
                    classname="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-gxmw0o-MuiSvgIcon-root"
                    focusable="false"
                  />
                  Add to batch
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </span>
            </span>
            <div
              class="MuiBox-root css-1aqmpzz"
            >
               
              <div
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren css-crkpmc-MuiDivider-root"
                role="separator"
              >
                <span
                  class="MuiDivider-wrapper css-165zycj-MuiDivider-wrapper"
                >
                  or
                </span>
              </div>
            </div>
            <span
              aria-label="Please connect your wallet"
              class=""
              data-mui-internal-clone-element="true"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1mhjei7-MuiButtonBase-root-MuiButton-root"
                data-testid="sign-btn"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                Sign
              </button>
            </span>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
